[package]
name = "RustParser"
version = "0.1.0"
authors = ["neko"]
edition = "2018"


[lib]
name = "neko_libparser"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xml-rs="0.6.0"
serde = "1.0.163"
serde_derive = "1.0.163"
cpython = "0.7.1"
